<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/warning_dialog"
        style="@style/RtlOverlay.DialogWindowTitle.AppCompat"
        android:textColor="@android:color/white"
        android:background="@color/dialog_titlebar_background"
        android:elevation="5dp"/>

    <TextView android:id="@+id/tobuy_edit_text"
        android:layout_width="match_parent"
        android:text="@string/reset_balance_text"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        style="@style/warning_text"
        android:background="@drawable/edittext_dialog"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <Button android:id="@+id/button_cancel"
            style="@style/button_text"
            android:background="@drawable/button_cancel"
            android:text="@string/button_cancel"
            android:textColor="#303f9f"
            android:layout_marginEnd="2dp"/>

        <Button android:id="@+id/button_confirm"
            style="@style/button_text"
            android:background="@drawable/button_confirm"
            android:text="@string/button_confirm"
            android:layout_marginStart="2dp"/>
    </LinearLayout>

</LinearLayout>