<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.carlodelledonne.tarbula_10.SettingsActivity"
    android:orientation="vertical"
    android:background="@drawable/tarbula_background_4">

    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        android:translationZ="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:focusableInTouchMode="true">

        <EditText android:id="@+id/new_edittext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/add_mate_hint"
            android:imeOptions="actionDone"
            style="@style/edittext"/>

        <Button android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"
            android:onClick="addInquilino"
            android:background="@drawable/button_confirm"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:background="@drawable/list_background"
            android:divider="@null"
            android:dividerHeight="0dp">
        </ListView>

        <TextView android:id="@+id/no_mates_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:textStyle="italic"
            android:text="@string/empty_mates_list_textview" />

    </RelativeLayout>

</LinearLayout>
